# vostok

./: CMakeLists.txt
src/: main.cpp
